force-app/main/default/objects/Account/fields/AR_Outstanding_Scored__c.field-meta.xml
<CustomField>
    <fullName>AR_Outstanding_Scored__c</fullName>
    <label>AR Outstanding (Scored)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>