force-app/main/default/objects/Account/fields/External_ERP_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>External_ERP_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>External ERP Customer Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>