force-app/main/default/objects/Account/fields/Open_Case_Count_scored__c.field-meta.xml
<CustomField>
    <fullName>Open_Case_Count_scored__c</fullName>
    <label>Open Case Count (scored)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>