force-app/main/default/objects/Account/fields/Portal_Event_Count_Scored__c.field-meta.xml
<CustomField>
    <fullName>Portal_Event_Count_Scored__c</fullName>
    <label>Portal Event Count Scored</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>