force-app/main/default/objects/Account/fields/Risk_Case_Points__c.field-meta.xml
<CustomField>
    <fullName>Risk_Case_Points__c</fullName>
    <label>Risk — Case Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>