force-app/main/default/objects/Account/fields/Risk_Score_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score_Last_Synced__c</fullName>
    <label>Risk Score Last Synced</label>
    <type>DateTime</type>
</CustomField>